# forf

./: .gitignore  Makefile  Pipfile  rand.c  setup.cfg  setup.py
cforf/: CMakeLists.txt  Makefile  cforfrunner.c
cforf/src/: cforfrunner.c
forf/: __init__.py  base.py  cforf.py  forf.py  func.py  pyforf.py  rand.py
tests/: test_e2e.py  test_func.py  test_main.py  test_prog.py  test_rand.py
tests/func/: test_CustomForfFunction.py  test_ForfFunctionSet.py  test_e2e.py
